Ãfix, add: fixed menu alignment to center and added menu drop class and dropdown ico

--- a/css/global.css
+++ b/css/global.css
@@ -31,4 +31,5 @@ a {
 .menu-pos {
   display: flex;
   gap: 40px;
+  align-items: center;
 }
